--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="style/css/style.css"/>
 
 	<script type="text/javascript" src="js/lib/raphael.js"></script>
+	<script type="text/javascript" src="js/app/constants.js"></script>
 </head>
 
 <body>
@@ -25,6 +26,8 @@
 	<section id="song" class="hidden">
 		<h1 id="title_song">a</h1>
 		<h2 id="title_artist">b</h2>
+		<div id="transcriber"><span id="title_transcriber"></span></div>
+		<div id="pretty-tab" class="pretty-tab"></div>
 	</section>
 
 	<section id="editor">
@@ -34,18 +37,83 @@
 			<span>Transcribed by:</span> <input type="text" id="transcriber" value="Jim"><br/>
 		</div>
 		
-		<div id="empty-context-menu" class="tabs-editor-context-menu">
-			<a id="add_text" class="button text" href="#">Add Text</a>
-			<a id="add_tabs" class="button text" href="#">Add Tabs</a>
-			<a id="add_youtube" class="button text" href="#">Add Youtube</a>
-			<a id ="remove_section" class="button text hidden" href="#">Remove this section</a>
-		</div>
+			<div id="text-editor-base">
+				<div id="block" class="menu tabsection tabs" style="display:none">
+					<div id="tabblock" class="" width="100%"></div>
+				</div>
+				<div id="block" class="menu tabsection youtube" style="display:none">
+					<div class="youtube_edit_data">
+						Youtube URL: <input class="youtube_url" type="text" size="50"/><a href="#" class="loadyoutube button color mini">load</a>
+						<input class="youtube_id" type="hidden" style="background-color:#ff9"/>
+					</div>					
+		            <span class="youtube_title" style="display:none"></span>
+				</div>
+				<div id="block" class="menu tabsection text" style="display:none">
+					<textarea class="tabtext" cols="80" rows="2" style="border:none"></textarea>
+				</div>
+				<div id="tabs-context-menu" class="tabs-editor-tools" style="display:none">
+					<a id="insert-chords" class="button mini" href="#">Insert chord</a>
+					<select id="chords"></select>
 
-		<div id="text-editor" class="tabs-editor">
+					<a class="button mini modifier" data-modifier="s" href="#" title="Slide"><img src="style/images/s.png"/></a>
+					<a class="button mini modifier" data-modifier="^" href="#" title="HammerOf"><img src="style/images/h.png"/></a>
+					<a class="button mini modifier" data-modifier="v" href="#" title="Vibrato"><img src="style/images/v.png"/></a>
+
+					<div class="checkgroup">
+						<a class="button mini colmodifier" data-modifier="accent" href="#" title="Accent"><img src="style/images/accent.png"/></a>
+						<a class="button mini colmodifier" data-modifier="golpe" href="#" title="Golpe"><img src="style/images/golpe.png"/></a>
+					</div>
+					<a id="open-tabtext" class="button mini" data-modifier="text" style="padding:2px" href="#" title="Add text"><img src="style/images/text.png"/></a>
+
+					<div id="barlines" class="checkgroup">
+						<a class="buttoncheck colmodifier" data-modifier="up_arrow" href="#" title="Golpe"><img src="style/images/up_arrow.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="down_arrow" href="#" title="Golpe"><img src="style/images/down_arrow.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="rasgueo" href="#" title="Golpe"><img src="style/images/rasgueo.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="alzapua" href="#" title="Alzapua"><img src="style/images/alzapua.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="rasgueo3" href="#" title="Rasgueo AII"><img src="style/images/rasgueo3.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="rasgueo4" href="#" title="Rasgueo AMII"><img src="style/images/rasgueo4.png"/></a>
+					</div>
+
+					<div id="barlines" class="checkgroup">
+						<a class="buttoncheck colmodifier" data-modifier="barline_simple" href="#" title="Barline single"><img src="style/images/barline_simple.png"/></a>
+<!--							<a class="buttoncheck colmodifier" data-modifier="barline_double" href="#" title="Barline double"><img src="images/barline_double.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="barline_repeat_left" href="#" title="Barline repeat left"><img src="images/barline_repeat_left.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="barline_repeat_right" href="#" title="Barline repeat right"><img src="images/barline_repeat_right.png"/></a>-->
+					</div>
+
+					<div id="lfingers" class="checkgroup">
+						<a class="buttoncheck" data-modifier="lfinger1" href="#" title="Finger 1 (Alt+1)"><img src="style/images/1.png"/></a>
+						<a class="buttoncheck" data-modifier="lfinger2" href="#" title="Finger 2 (Alt+2)"><img src="style/images/2.png"/></a>
+						<a class="buttoncheck" data-modifier="lfinger3" href="#" title="Finger 3 (Alt+3)"><img src="style/images/3.png"/></a>
+						<a class="buttoncheck" data-modifier="lfinger4" href="#" title="Finger 4 (Alt+4)"><img src="style/images/4.png"/></a>
+					</div>
+					<div id="rfingers" class="checkgroup">
+						<a class="buttoncheck colmodifier" data-modifier="p" href="#" title="Finger (p)"><img src="style/images/p.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="i" href="#" title="Finger (i)"><img src="style/images/i.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="m" href="#" title="Finger (m)"><img src="style/images/m.png"/></a>
+						<a class="buttoncheck colmodifier" data-modifier="a" href="#" title="Finger (a)"><img src="style/images/a.png"/></a>
+					</div>
+				</div>
+				<div id="empty-context-menu" class="tabs-editor-context-menu" style="text-align:right">
+					<a id="add_text" class="button text" href="#">Add Text</a>
+					<a id="add_tabs" class="button text" href="#">Add Tabs</a>
+					<a id="add_youtube" class="button text" href="#">Add Youtube</a>
+					<a id ="remove_section" style="display:none" class="button text" href="#">Remove this section</a>
+				</div>
+			<div id="text-editor" class="tabs-editor">
+			</div>
+
 		</div>
 	</section>
 
 	<section id="file" class="hidden">
+		<div class="submenu" align="right">
+			<a id="new_ktb" class="button text">Clear</a>
+			<a id="generate_ktb" class="button text">Generate KTB</a>
+			<a id="save_ktb" class="button text">Save KTB</a>
+			<a id="load_ktb" class="button text">Load KTB</a>
+		</div>
+		<textarea id="ktg" readonly="readonly"></textarea>
 	</section>
 
 	<section id="help" class="hidden">
